# CodeForArticles

./: README.md
C++ In Practice - Copy Elision, Temporary Objects, prvalues and C++17 Mandatory Rules/: CMakeLists.txt  main.cpp
